fix z-index

--- a/components/project-tasks-slider/project-tasks-slider.scss
+++ b/components/project-tasks-slider/project-tasks-slider.scss
@@ -80,4 +80,8 @@
   .project-tasks-slider {
     padding-top: 60px;
   }
+
+  .project-tasks-slider-circle-white {
+    z-index: -2;
+  }
 }
